kustomization/base/ara/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ara-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: ara
